force-app/main/default/objects/Sales_Target_BDD__c/Sales_Target_BDD__c.object-meta.xml
<CustomObject>
    <label>Sales Target BDD</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Sales Target BDD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Target BDD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>