force-app/main/default/objects/Sales_Target_BDD__c/fields/Business_Director__c.field-meta.xml
<CustomField>
    <fullName>Business_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Director</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Gibson_Role__c</field>
            <operation>equals</operation>
            <value>Business Development Director</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Target BDD</relationshipLabel>
    <relationshipName>Business_Development_Director</relationshipName>
    <type>Lookup</type>
</CustomField>