force-app/main/default/objects/Sales_Target_BDD__c/fields/Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Current_FY__c</fullName>
    <label>Current FY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>