force-app/main/default/objects/Sales_Target_BDD__c/fields/Sales_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Business Unit</label>
    <referenceTo>Sales_Business_Unit__c</referenceTo>
    <relationshipLabel>Sales Target BDD</relationshipLabel>
    <relationshipName>Sales_Target_BDD</relationshipName>
    <type>Lookup</type>
</CustomField>