force-app/main/default/objects/Sales_Target_BDD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Director__c</columns>
    <columns>Current_FY__c</columns>
    <columns>Target__c</columns>
    <columns>Actual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>